--- a/software/gui/src/mainwindow.ui
+++ b/software/gui/src/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1215</width>
+    <height>757</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="exit_pb">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>500</y>
+      <x>1090</x>
+      <y>630</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="forward_pb">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>30</y>
+      <x>530</x>
+      <y>510</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -46,8 +46,8 @@
    <widget class="QPushButton" name="left_pb">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>70</y>
+      <x>440</x>
+      <y>550</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -62,8 +62,8 @@
    <widget class="QPushButton" name="right_pb">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>70</y>
+      <x>620</x>
+      <y>550</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -78,8 +78,8 @@
    <widget class="QPushButton" name="backward_pb">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>110</y>
+      <x>530</x>
+      <y>590</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -94,18 +94,21 @@
    <widget class="QGraphicsView" name="stream_gv">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>300</x>
       <y>0</y>
-      <width>471</width>
+      <width>561</width>
       <height>401</height>
      </rect>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="imu_l">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>250</y>
+      <x>1020</x>
+      <y>20</y>
       <width>41</width>
       <height>17</height>
      </rect>
@@ -127,8 +130,8 @@
    <widget class="QLabel" name="acceleration_l">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>280</y>
+      <x>920</x>
+      <y>50</y>
       <width>91</width>
       <height>17</height>
      </rect>
@@ -143,8 +146,8 @@
    <widget class="QLabel" name="control_l">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>0</y>
+      <x>540</x>
+      <y>470</y>
       <width>67</width>
       <height>17</height>
      </rect>
@@ -169,8 +172,8 @@
    <widget class="QLabel" name="velocity_l">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>280</y>
+      <x>1070</x>
+      <y>50</y>
       <width>67</width>
       <height>17</height>
      </rect>
@@ -186,7 +189,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>500</y>
+      <y>470</y>
       <width>111</width>
       <height>27</height>
      </rect>
@@ -198,8 +201,8 @@
    <widget class="QPushButton" name="stream_pb">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>430</y>
+      <x>530</x>
+      <y>410</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -211,8 +214,8 @@
    <widget class="QLineEdit" name="send_cmd_le">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>360</y>
+      <x>930</x>
+      <y>140</y>
       <width>211</width>
       <height>27</height>
      </rect>
@@ -221,8 +224,8 @@
    <widget class="QPushButton" name="send_cmd_pb">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>390</y>
+      <x>960</x>
+      <y>170</y>
       <width>151</width>
       <height>27</height>
      </rect>
@@ -234,8 +237,8 @@
    <widget class="QLCDNumber" name="acceleration_lcd">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>300</y>
+      <x>930</x>
+      <y>80</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -256,8 +259,8 @@
    <widget class="QLCDNumber" name="velocity_lcd">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>300</y>
+      <x>1070</x>
+      <y>80</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -270,39 +273,17 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>430</y>
+      <y>400</y>
       <width>113</width>
       <height>27</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="host_l">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>430</y>
-      <width>51</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Host:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="port_l">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>460</y>
+      <y>430</y>
       <width>51</width>
       <height>31</height>
      </rect>
@@ -324,17 +305,17 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>460</y>
+      <y>430</y>
       <width>113</width>
       <height>27</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="camera_move_l">
+   <widget class="QLabel" name="camera_l">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>160</y>
+      <x>90</x>
+      <y>10</y>
       <width>101</width>
       <height>17</height>
      </rect>
@@ -350,7 +331,7 @@
      <enum>Qt::LeftToRight</enum>
     </property>
     <property name="text">
-     <string>Move Camera</string>
+     <string>Camera</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -359,8 +340,8 @@
    <widget class="QPushButton" name="left_camera_pb">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>190</y>
+      <x>40</x>
+      <y>90</y>
       <width>99</width>
       <height>27</height>
      </rect>
@@ -372,14 +353,120 @@
    <widget class="QPushButton" name="right_camera_pb">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>190</y>
+      <x>150</x>
+      <y>90</y>
       <width>99</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
      <string>right</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="status_pte">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>560</y>
+      <width>271</width>
+      <height>131</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="host_l">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>400</y>
+      <width>51</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Host:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="status_l">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>520</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Status:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="camera_move_l">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>60</y>
+      <width>51</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="text">
+     <string>Move:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="camera_settings_l">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>160</y>
+      <width>71</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="text">
+     <string>Settings:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
@@ -397,7 +484,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1215</width>
      <height>25</height>
     </rect>
    </property>
